src/main/webapp/resources/myapp.css
.ui-widget {
    /*font-size: 12px !important;*/
    font-size: 12px;
}
.ui-layout-north {
    z-index: 20 !important;
    overflow: hidden !important;;
}
.ui-layout-north .ui-layout-unit-content {
    overflow: hidden !important;
}
.ui-layout-pane {
    padding: 0;
    overflow: hidden;
}
.ui-widget-header {
    text-align: center;
    text-transform: uppercase;
}
.ui-button {
    /*margin-top: 10px !important;*/
    margin-top: 10px;
}

.exit-icon {
    background: url(./images/exit.gif) no-repeat !important;
    height: 20px;
    width: 25px;
}
.help-icon {
    background: url(./images/help.gif) no-repeat !important;
    height: 25px;
    width: 25px;
}
.user-guide-icon {
    background: url(./images/UserGuide.gif) no-repeat !important;
    height: 25px;
    width: 36px;
}
.timer-icon {
    background: url(./images/timer.gif) no-repeat !important;
    height: 25px;
    width: 25px;
}
.ui-button-icon-only {
    height: 30px;
    width: 30px;
    margin-top: 2px;
    margin-bottom: 2px;
    /*font-size: 10px !important;
    margin-left: 1px;*/
}
.ui-toolbar{
    height: auto !important;
}

.ui-toolbar-group-right{
    margin-top: 10px;
}

.ui-timer{
    font-size: 14px !important;
}

.ui-outputlabel{
    padding-right: 5px;
    text-transform: none;
}

ul.ui-menu-child
{
    width: auto !important;
    min-width: 175px;
}

.enhlogrecs
{
    background: lightskyblue;
}

